fixtures/vyper/simple/overflow/positive/i16-0.3.vy
#! {
#!   "modes": [
#!     "V 0.3.9",
#!     "V 0.3.10"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "32767"
#!           ],
#!           "caller": "0x2cC12F0dCf694F50F00259d8D435ef584BB71279"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: int16) -> int16:
    return witness + 1
