fixtures/vyper/simple/overflow/negative/i16-0.3.vy
#! {
#!   "modes": [
#!     "V 0.3.9",
#!     "V 0.3.10"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "-32768"
#!           ],
#!           "caller": "0x5fA848d27BdC8976EB1e55F7B49f704b1709C975"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: int16) -> int16:
    return witness - 1
